@@ -12,6 +12,7 @@ import javax.lang.model.util.ElementFilter;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 public class ComponentFactoryStep implements Step {
 
@@ -33,7 +34,9 @@ public class ComponentFactoryStep implements Step {
     @Override
     public Set<? extends Element> process(Map<String, Set<Element>> elementsByAnnotation) {
         try {
-            List<Element> elements = elementsByAnnotation.values().stream().flatMap(Set::stream).toList();
+            List<Element> elements = elementsByAnnotation.values().stream()
+                    .flatMap(Set::stream)
+                    .collect(Collectors.toList());
             List<TypeElement> typeElements = ElementFilter.typesIn(elements);
             for (TypeElement typeElement : typeElements) {
                 validator.validate(typeElement);
