@@ -6,8 +6,17 @@ import io.jbock.simple.processor.util.Edge;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Set;
+import java.util.stream.Collectors;
 
-public record Graph(Set<Edge> edges, Set<Binding> nodes) {
+public final class Graph {
+
+    private final Set<Edge> edges;
+    private final Set<Binding> nodes;
+
+    public Graph(Set<Edge> edges, Set<Binding> nodes) {
+        this.edges = edges;
+        this.nodes = nodes;
+    }
 
     void addAll(Graph other) {
         edges.addAll(other.edges);
@@ -19,20 +28,28 @@ public record Graph(Set<Edge> edges, Set<Binding> nodes) {
     }
 
     List<Edge> edgesFrom(Binding n) {
-        return edges.stream().filter(edge -> edge.source().equals(n)).toList();
+        return edges.stream().filter(edge -> edge.source().equals(n)).collect(Collectors.toList());
     }
 
     List<Edge> edgesTo(Binding m) {
-        return edges.stream().filter(edge -> edge.destination().equals(m)).toList();
+        return edges.stream().filter(edge -> edge.destination().equals(m)).collect(Collectors.toList());
     }
 
     List<Binding> startNodes() {
         return nodes.stream()
                 .filter(r -> edgesTo(r).isEmpty())
-                .toList();
+                .collect(Collectors.toList());
     }
 
     void removeEdge(Edge edge) {
         edges.remove(edge);
+    }
+
+    Set<Binding> nodes() {
+        return nodes;
+    }
+
+    Set<Edge> edges() {
+        return edges;
     }
 }
